--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
     "ant-design-vue": "^4.2.6",
+    "@types/d3": "^7.4.3",
     "axios": "^1.7.9",
     "connect-gzip-static": "^4.2.1",
     "d3": "^7.9.0",
@@ -42,5 +43,6 @@
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
     "vue-tsc": "^2.2.0"
-  }
+  },
+  "packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195"
 }
